# netguru-ddd-workshop

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
data/mongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--5602085976403035288.wt  collection-2--5602085976403035288.wt  collection-4--5602085976403035288.wt  index-1--5602085976403035288.wt  index-3--5602085976403035288.wt  index-5--5602085976403035288.wt  index-6--5602085976403035288.wt  sizeStorer.wt
data/mongo/diagnostic.data/: metrics.2022-05-31T16-27-53Z-00000  metrics.2022-06-01T19-34-56Z-00000  metrics.interim
ddd_workshop/: bootstrap.py
ddd_workshop/building_blocks/: custom_types.py
ddd_workshop/building_blocks/domain/: domain_event.py  entity.py
ddd_workshop/building_blocks/infrastructure/: domain_event_publisher.py  event_store.py  serialization.py
ddd_workshop/wallet/application/: dto.py  query.py  query_handler.py  wallet_service.py
ddd_workshop/wallet/domain/: entities.py  errors.py  events.py  repository.py  value_objects.py
ddd_workshop/wallet/infrastructure/: repository.py
tests/: conftest.py
tests/building_blocks/: conftest.py  test_domain_event_publisher.py  test_mongo_event_store.py
tests/wallet/application/: conftest.py  test_query_handler.py  test_wallet_service.py
tests/wallet/domain/: test_money.py  test_wallet.py
tests/wallet/infrastrucutre/: test_wallet_repo.py
